# langgraph

./: .env.example  README.md  pyproject.toml
examples/: advanced_research.py  basic_research.py  company_board_meeting.py
src/ai_research_assistant/: __init__.py  company_simulator.py  company_state.py  executives.py  research_assistant.py  state.py
tests/: __init__.py  test_company_simulator.py  test_research_assistant.py
